// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Visualizations -> Details -> Editor -> Columns Settings Changes column alignment 1`] = `
Object {
  "columns": Array [
    Object {
      "alignContent": "center",
      "allowHTML": false,
      "booleanValues": Array [
        "false",
        "true",
      ],
      "dateTimeFormat": undefined,
      "description": "",
      "displayAs": "number",
      "highlightLinks": false,
      "imageHeight": "",
      "imageTitleTemplate": "{{ @ }}",
      "imageUrlTemplate": "{{ @ }}",
      "imageWidth": "",
      "linkOpenInNewTab": true,
      "linkTextTemplate": "{{ @ }}",
      "linkTitleTemplate": "{{ @ }}",
      "linkUrlTemplate": "{{ @ }}",
      "name": "id",
      "nullValue": "null",
      "numberFormat": "0,0",
      "order": 100000,
      "title": "id",
      "type": "integer",
      "visible": true,
    },
    Object {
      "alignContent": "left",
      "allowHTML": false,
      "booleanValues": Array [
        "false",
        "true",
      ],
      "dateTimeFormat": undefined,
      "description": "",
      "displayAs": "string",
      "highlightLinks": false,
      "imageHeight": "",
      "imageTitleTemplate": "{{ @ }}",
      "imageUrlTemplate": "{{ @ }}",
      "imageWidth": "",
      "linkOpenInNewTab": true,
      "linkTextTemplate": "{{ @ }}",
      "linkTitleTemplate": "{{ @ }}",
      "linkUrlTemplate": "{{ @ }}",
      "name": "name",
      "nullValue": "null",
      "numberFormat": undefined,
      "order": 100001,
      "title": "name",
      "type": "string",
      "visible": true,
    },
    Object {
      "alignContent": "right",
      "allowHTML": false,
      "booleanValues": Array [
        "false",
        "true",
      ],
      "dateTimeFormat": "DD/MM/YYYY HH:mm",
      "description": "",
      "displayAs": "datetime",
      "highlightLinks": false,
      "imageHeight": "",
      "imageTitleTemplate": "{{ @ }}",
      "imageUrlTemplate": "{{ @ }}",
      "imageWidth": "",
      "linkOpenInNewTab": true,
      "linkTextTemplate": "{{ @ }}",
      "linkTitleTemplate": "{{ @ }}",
      "linkUrlTemplate": "{{ @ }}",
      "name": "created_at",
      "nullValue": "null",
      "numberFormat": undefined,
      "order": 100002,
      "title": "created_at",
      "type": "datetime",
      "visible": true,
    },
  ],
}
`;

exports[`Visualizations -> Details -> Editor -> Columns Settings Changes column description 1`] = `
Object {
  "columns": Array [
    Object {
      "alignContent": "right",
      "allowHTML": false,
      "booleanValues": Array [
        "false",
        "true",
      ],
      "dateTimeFormat": undefined,
      "description": "",
      "displayAs": "number",
      "highlightLinks": false,
      "imageHeight": "",
      "imageTitleTemplate": "{{ @ }}",
      "imageUrlTemplate": "{{ @ }}",
      "imageWidth": "",
      "linkOpenInNewTab": true,
      "linkTextTemplate": "{{ @ }}",
      "linkTitleTemplate": "{{ @ }}",
      "linkUrlTemplate": "{{ @ }}",
      "name": "id",
      "nullValue": "null",
      "numberFormat": "0,0",
      "order": 100000,
      "title": "id",
      "type": "integer",
      "visible": true,
    },
    Object {
      "alignContent": "left",
      "allowHTML": false,
      "booleanValues": Array [
        "false",
        "true",
      ],
      "dateTimeFormat": undefined,
      "description": "User full name",
      "displayAs": "string",
      "highlightLinks": false,
      "imageHeight": "",
      "imageTitleTemplate": "{{ @ }}",
      "imageUrlTemplate": "{{ @ }}",
      "imageWidth": "",
      "linkOpenInNewTab": true,
      "linkTextTemplate": "{{ @ }}",
      "linkTitleTemplate": "{{ @ }}",
      "linkUrlTemplate": "{{ @ }}",
      "name": "name",
      "nullValue": "null",
      "numberFormat": undefined,
      "order": 100001,
      "title": "name",
      "type": "string",
      "visible": true,
    },
    Object {
      "alignContent": "right",
      "allowHTML": false,
      "booleanValues": Array [
        "false",
        "true",
      ],
      "dateTimeFormat": "DD/MM/YYYY HH:mm",
      "description": "",
      "displayAs": "datetime",
      "highlightLinks": false,
      "imageHeight": "",
      "imageTitleTemplate": "{{ @ }}",
      "imageUrlTemplate": "{{ @ }}",
      "imageWidth": "",
      "linkOpenInNewTab": true,
      "linkTextTemplate": "{{ @ }}",
      "linkTitleTemplate": "{{ @ }}",
      "linkUrlTemplate": "{{ @ }}",
      "name": "created_at",
      "nullValue": "null",
      "numberFormat": undefined,
      "order": 100002,
      "title": "created_at",
      "type": "datetime",
      "visible": true,
    },
  ],
}
`;

exports[`Visualizations -> Details -> Editor -> Columns Settings Changes column display type 1`] = `
Object {
  "columns": Array [
    Object {
      "alignContent": "right",
      "allowHTML": false,
      "booleanValues": Array [
        "false",
        "true",
      ],
      "dateTimeFormat": undefined,
      "description": "",
      "displayAs": "number",
      "highlightLinks": false,
      "imageHeight": "",
      "imageTitleTemplate": "{{ @ }}",
      "imageUrlTemplate": "{{ @ }}",
      "imageWidth": "",
      "linkOpenInNewTab": true,
      "linkTextTemplate": "{{ @ }}",
      "linkTitleTemplate": "{{ @ }}",
      "linkUrlTemplate": "{{ @ }}",
      "name": "id",
      "nullValue": "null",
      "numberFormat": "0,0",
      "order": 100000,
      "title": "id",
      "type": "integer",
      "visible": true,
    },
    Object {
      "alignContent": "left",
      "allowHTML": false,
      "booleanValues": Array [
        "false",
        "true",
      ],
      "dateTimeFormat": undefined,
      "description": "",
      "displayAs": "string",
      "highlightLinks": false,
      "imageHeight": "",
      "imageTitleTemplate": "{{ @ }}",
      "imageUrlTemplate": "{{ @ }}",
      "imageWidth": "",
      "linkOpenInNewTab": true,
      "linkTextTemplate": "{{ @ }}",
      "linkTitleTemplate": "{{ @ }}",
      "linkUrlTemplate": "{{ @ }}",
      "name": "name",
      "nullValue": "null",
      "numberFormat": undefined,
      "order": 100001,
      "title": "name",
      "type": "string",
      "visible": true,
    },
    Object {
      "alignContent": "right",
      "allowHTML": false,
      "booleanValues": Array [
        "false",
        "true",
      ],
      "dateTimeFormat": "DD/MM/YYYY HH:mm",
      "description": "",
      "displayAs": "string",
      "highlightLinks": false,
      "imageHeight": "",
      "imageTitleTemplate": "{{ @ }}",
      "imageUrlTemplate": "{{ @ }}",
      "imageWidth": "",
      "linkOpenInNewTab": true,
      "linkTextTemplate": "{{ @ }}",
      "linkTitleTemplate": "{{ @ }}",
      "linkUrlTemplate": "{{ @ }}",
      "name": "created_at",
      "nullValue": "null",
      "numberFormat": undefined,
      "order": 100002,
      "title": "created_at",
      "type": "datetime",
      "visible": true,
    },
  ],
}
`;

exports[`Visualizations -> Details -> Editor -> Columns Settings Changes column title 1`] = `
Object {
  "columns": Array [
    Object {
      "alignContent": "right",
      "allowHTML": false,
      "booleanValues": Array [
        "false",
        "true",
      ],
      "dateTimeFormat": undefined,
      "description": "",
      "displayAs": "number",
      "highlightLinks": false,
      "imageHeight": "",
      "imageTitleTemplate": "{{ @ }}",
      "imageUrlTemplate": "{{ @ }}",
      "imageWidth": "",
      "linkOpenInNewTab": true,
      "linkTextTemplate": "{{ @ }}",
      "linkTitleTemplate": "{{ @ }}",
      "linkUrlTemplate": "{{ @ }}",
      "name": "id",
      "nullValue": "null",
      "numberFormat": "0,0",
      "order": 100000,
      "title": "id",
      "type": "integer",
      "visible": true,
    },
    Object {
      "alignContent": "left",
      "allowHTML": false,
      "booleanValues": Array [
        "false",
        "true",
      ],
      "dateTimeFormat": undefined,
      "description": "",
      "displayAs": "string",
      "highlightLinks": false,
      "imageHeight": "",
      "imageTitleTemplate": "{{ @ }}",
      "imageUrlTemplate": "{{ @ }}",
      "imageWidth": "",
      "linkOpenInNewTab": true,
      "linkTextTemplate": "{{ @ }}",
      "linkTitleTemplate": "{{ @ }}",
      "linkUrlTemplate": "{{ @ }}",
      "name": "name",
      "nullValue": "null",
      "numberFormat": undefined,
      "order": 100001,
      "title": "Full Name",
      "type": "string",
      "visible": true,
    },
    Object {
      "alignContent": "right",
      "allowHTML": false,
      "booleanValues": Array [
        "false",
        "true",
      ],
      "dateTimeFormat": "DD/MM/YYYY HH:mm",
      "description": "",
      "displayAs": "datetime",
      "highlightLinks": false,
      "imageHeight": "",
      "imageTitleTemplate": "{{ @ }}",
      "imageUrlTemplate": "{{ @ }}",
      "imageWidth": "",
      "linkOpenInNewTab": true,
      "linkTextTemplate": "{{ @ }}",
      "linkTitleTemplate": "{{ @ }}",
      "linkUrlTemplate": "{{ @ }}",
      "name": "created_at",
      "nullValue": "null",
      "numberFormat": undefined,
      "order": 100002,
      "title": "created_at",
      "type": "datetime",
      "visible": true,
    },
  ],
}
`;

exports[`Visualizations -> Details -> Editor -> Columns Settings Hides multiple columns 1`] = `
Object {
  "columns": Array [
    Object {
      "alignContent": "right",
      "allowHTML": false,
      "booleanValues": Array [
        "false",
        "true",
      ],
      "dateTimeFormat": undefined,
      "description": "",
      "displayAs": "number",
      "highlightLinks": false,
      "imageHeight": "",
      "imageTitleTemplate": "{{ @ }}",
      "imageUrlTemplate": "{{ @ }}",
      "imageWidth": "",
      "linkOpenInNewTab": true,
      "linkTextTemplate": "{{ @ }}",
      "linkTitleTemplate": "{{ @ }}",
      "linkUrlTemplate": "{{ @ }}",
      "name": "id",
      "nullValue": "null",
      "numberFormat": "0,0",
      "order": 100000,
      "title": "id",
      "type": "integer",
      "visible": false,
    },
    Object {
      "alignContent": "left",
      "allowHTML": false,
      "booleanValues": Array [
        "false",
        "true",
      ],
      "dateTimeFormat": undefined,
      "description": "",
      "displayAs": "string",
      "highlightLinks": false,
      "imageHeight": "",
      "imageTitleTemplate": "{{ @ }}",
      "imageUrlTemplate": "{{ @ }}",
      "imageWidth": "",
      "linkOpenInNewTab": true,
      "linkTextTemplate": "{{ @ }}",
      "linkTitleTemplate": "{{ @ }}",
      "linkUrlTemplate": "{{ @ }}",
      "name": "name",
      "nullValue": "null",
      "numberFormat": undefined,
      "order": 100001,
      "title": "name",
      "type": "string",
      "visible": true,
    },
    Object {
      "alignContent": "right",
      "allowHTML": false,
      "booleanValues": Array [
        "false",
        "true",
      ],
      "dateTimeFormat": "DD/MM/YYYY HH:mm",
      "description": "",
      "displayAs": "datetime",
      "highlightLinks": false,
      "imageHeight": "",
      "imageTitleTemplate": "{{ @ }}",
      "imageUrlTemplate": "{{ @ }}",
      "imageWidth": "",
      "linkOpenInNewTab": true,
      "linkTextTemplate": "{{ @ }}",
      "linkTitleTemplate": "{{ @ }}",
      "linkUrlTemplate": "{{ @ }}",
      "name": "created_at",
      "nullValue": "null",
      "numberFormat": undefined,
      "order": 100002,
      "title": "created_at",
      "type": "datetime",
      "visible": true,
    },
  ],
}
`;

exports[`Visualizations -> Details -> Editor -> Columns Settings Toggles column visibility 1`] = `
Object {
  "columns": Array [
    Object {
      "alignContent": "right",
      "allowHTML": false,
      "booleanValues": Array [
        "false",
        "true",
      ],
      "dateTimeFormat": undefined,
      "description": "",
      "displayAs": "number",
      "highlightLinks": false,
      "imageHeight": "",
      "imageTitleTemplate": "{{ @ }}",
      "imageUrlTemplate": "{{ @ }}",
      "imageWidth": "",
      "linkOpenInNewTab": true,
      "linkTextTemplate": "{{ @ }}",
      "linkTitleTemplate": "{{ @ }}",
      "linkUrlTemplate": "{{ @ }}",
      "name": "id",
      "nullValue": "null",
      "numberFormat": "0,0",
      "order": 100000,
      "title": "id",
      "type": "integer",
      "visible": false,
    },
    Object {
      "alignContent": "left",
      "allowHTML": false,
      "booleanValues": Array [
        "false",
        "true",
      ],
      "dateTimeFormat": undefined,
      "description": "",
      "displayAs": "string",
      "highlightLinks": false,
      "imageHeight": "",
      "imageTitleTemplate": "{{ @ }}",
      "imageUrlTemplate": "{{ @ }}",
      "imageWidth": "",
      "linkOpenInNewTab": true,
      "linkTextTemplate": "{{ @ }}",
      "linkTitleTemplate": "{{ @ }}",
      "linkUrlTemplate": "{{ @ }}",
      "name": "name",
      "nullValue": "null",
      "numberFormat": undefined,
      "order": 100001,
      "title": "name",
      "type": "string",
      "visible": true,
    },
    Object {
      "alignContent": "right",
      "allowHTML": false,
      "booleanValues": Array [
        "false",
        "true",
      ],
      "dateTimeFormat": "DD/MM/YYYY HH:mm",
      "description": "",
      "displayAs": "datetime",
      "highlightLinks": false,
      "imageHeight": "",
      "imageTitleTemplate": "{{ @ }}",
      "imageUrlTemplate": "{{ @ }}",
      "imageWidth": "",
      "linkOpenInNewTab": true,
      "linkTextTemplate": "{{ @ }}",
      "linkTitleTemplate": "{{ @ }}",
      "linkUrlTemplate": "{{ @ }}",
      "name": "created_at",
      "nullValue": "null",
      "numberFormat": undefined,
      "order": 100002,
      "title": "created_at",
      "type": "datetime",
      "visible": true,
    },
  ],
}
`;
